<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >
    
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:id="@+id/tvHeader"
        android:text="@string/add_connection"
        android:textColor="#ffffff"
        android:gravity="center"
        android:textSize="24sp"
        android:background="#39567c"/>
    
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvHeader"
        android:layout_margin="10dp">
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
             <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:padding="5dp"
		        
		        android:background="@drawable/text_box_bg"
		        android:orientation="horizontal">
		        
		        <TextView 
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:text="@string/auto_add_conection"
			        android:textColor="#757e8b"
			        android:id="@+id/tvAddConnection"
			        android:gravity="center_vertical"
			        android:textSize="20sp"
			        android:paddingLeft="5dp"
			        />
		        
		        <ToggleButton 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:id="@+id/toggleAutoAddConnection"
		            android:checked="false"/>
		        
		    </LinearLayout>
            
             <TextView 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/by_using"
		        android:id="@+id/byUsing"
		        android:textColor="#757e8b"
		        android:textSize="15sp"
		        android:layout_marginTop="10dp"
		        />
             <TextView 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/auto_add_text"
		        android:textColor="#757e8b"
		        android:id="@+id/auto_add_text"
		        android:textSize="14sp"
		        android:layout_marginTop="10dp"
		        android:padding="5dp"
		        android:background="@drawable/text_box_bg"
		        />
             <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:padding="5dp"
		        android:layout_marginTop="15dp"
		        android:background="@drawable/text_box_bg"
		        android:orientation="horizontal">
		        
		        <TextView 
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:text="@string/allow_others"
			         android:id="@+id/allowOther"
			        android:textColor="#757e8b"
			        android:paddingLeft="5dp"
			        android:gravity="center_vertical"
			        android:textSize="20sp"
			        />
		        
		        <ToggleButton 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:id="@+id/toggleAllowOtherstoAdd"
		            android:checked="false"/>
		        
		    </LinearLayout>
		    <TextView 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/you_will"
		        android:textColor="#757e8b"
		         android:id="@+id/youWill"
		        android:textSize="15sp"
		        android:layout_marginTop="10dp"
		        />
             <TextView 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/allow_others_text"
		        android:textColor="#757e8b"
		        android:textSize="14sp"
		        android:id="@+id/allowOthersText"
		        android:layout_marginTop="10dp"
		        android:padding="5dp"
		        android:background="@drawable/text_box_bg"
		        />
		    
       <com.ui.common.PressableTextView 
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/next"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:layout_margin="20dp"
        android:id="@+id/tvNext"
        android:background="@drawable/butttons_bg"/>
             
        </LinearLayout>
        
    </ScrollView>
   
    
     
    
      
    <ProgressBar 
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/prgAddConnection"
        android:visibility="gone"
        
        android:layout_centerInParent="true"/>
    
    

</RelativeLayout>
