<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
     >
     
    <ImageView 
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:id="@+id/ivProfilePic"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:layout_alignParentRight="true"
        android:background="#ffffff"
        android:src="@drawable/user_profile_default_image"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_below="@+id/ivProfilePic"
        android:layout_centerHorizontal="true">
        
        <TextView 
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:text="@string/free_call"
        android:textSize="17sp"
        android:layout_margin="10dp"
        android:id="@+id/tvFreeCall"
        android:background="@drawable/profile_btn_bg"
        android:gravity="center"
        android:textColor="#ffffff"/>
    
     <TextView 
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:text="@string/free_message"
        android:textSize="17sp"
        android:layout_margin="10dp"
        android:id="@+id/tvFreemessage"
        android:background="@drawable/profile_btn_bg"
        android:gravity="center"
        android:textColor="#ffffff"/>
        
    </LinearLayout>
    
    
    
     <com.ui.common.MyImageView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivSendRequest"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:padding="10dp"
        android:layout_below="@+id/ivProfilePic"
        android:layout_alignParentRight="true"
        android:src="@drawable/send_request_button"/>
     
     <ImageView 
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:id="@+id/sep"
         android:layout_below="@+id/ivSendRequest"
         android:src="#e5e5e5"/>
  
      <TextView 
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:text="@string/status"
        android:layout_margin="8dp"
        android:id="@+id/lableStatus"
        android:textSize="17sp"
        android:textColor="#39567c"
        android:layout_below="@+id/sep"
        />
      <TextView 
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/tvStatus"
          android:textSize="17sp"
          android:textColor="#757e8b"
          android:layout_margin="8dp"
          android:maxLines="3"
          android:layout_below="@+id/sep"
          android:layout_toRightOf="@+id/lableStatus"
          />

      <TextView 
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:text="@string/location"
        android:layout_margin="8dp"
        android:id="@+id/lableLocation"
        android:textSize="17sp"
        android:textColor="#39567c"
        android:layout_below="@+id/tvStatus"
        />
      
       <TextView 
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/tvLocation"
          android:textSize="17sp"
          android:textColor="#757e8b"
          android:layout_margin="8dp"
          android:layout_below="@+id/tvStatus"
          android:layout_toRightOf="@+id/lableLocation"
          />
      <TextView 
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:text="@string/mobile"
        android:layout_margin="8dp"
        android:id="@+id/lableMobile"
        android:textSize="17sp"
        android:textColor="#39567c"
        android:layout_below="@+id/lableLocation"
        />
      <TextView 
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/tvMobile"
          android:textSize="17sp"
          android:textColor="#757e8b"
          android:layout_margin="8dp"
          android:layout_below="@+id/lableLocation"
          android:layout_toRightOf="@+id/lableMobile"
          />
      
      <TextView 
        android:layout_width="220dp"
        android:layout_height="30dp"
        android:text="@string/see_business"
        android:textSize="17sp"
        android:id="@+id/tvSeeBusinessPage"
        android:background="@drawable/butttons_bg"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"/>
      
      <ProgressBar 
          android:layout_width="50dp"
          android:layout_height="50dp"
          android:id="@+id/prgProfile"
          android:layout_centerInParent="true"
          android:visibility="gone"/>
</RelativeLayout>
